T1-473 Fix selector for second button in callouts on small screens

--- a/src/client/components/organisms/hero/hero.scss
+++ b/src/client/components/organisms/hero/hero.scss
@@ -75,8 +75,8 @@
   width: 100%;
 
   // hide the second button on small screens
-  a:last-child,
-  button:last-child {
+  a:nth-child(2),
+  button:nth-child(2) {
     @include for-small-only {
       display: none;
     }
